# docs/swagger.yaml
@@ -289,4 +289,24 @@ paths:
           schema:
             $ref: '#/definitions/app.Response'
       summary: Edit a tag
+  /upload:
+    post:
+      parameters:
+      - description: image
+        in: formData
+        name: image
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/app.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+      summary: Upload an image
 swagger: "2.0"
